# steam-backlog-enforcer

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  DESIGN_AUDIT_TODO.md  README.md  install.sh  pyproject.toml  requirements.txt  run.sh  steam-backlog-enforcer.service
.github/workflows/: python-tests.yml
docs/explanations/: 2026-07-18-explanation-defer-steam-restart-during-update.html  2026-07-18-explanation-steam-cdp-restart-fix.html  2026-07-19-explanation-cli-dashed-subcommands.html  2026-07-19-explanation-manual-pick-grace-and-multi-pick.html  index.html
scripts/: check_requirements_sync.py  ci_mirror.sh  setup_mcp.sh
steam_backlog_enforcer/: _actions.py  _cmd_done.py  _enforce_loop.py  _hltb_detail.py  _hltb_search.py  _hltb_types.py  _mcp.py  _scanning_confidence.py  _stats.py  _steam_state.py  _total_block.py  _web_dataset.py  _web_server.py  _whitelist.py  config.py  enforcer.py  game_install.py  hltb.py  library_hider.py  main.py  protondb.py  scanning.py  store_blocker.py
steam_backlog_enforcer/docs/: pick_game_manually_design.md
steam_backlog_enforcer/tests/: conftest.py  test_actions.py  test_cmd_done_part2.py  test_config.py  test_enforce_loop.py  test_enforce_loop_part2.py  test_enforce_loop_part3.py  test_enforcer.py  test_enforcer_part2.py  test_game_install.py  test_game_install_part2.py  test_game_install_part3.py  test_hltb.py  test_hltb_detail.py  test_hltb_part2.py  test_hltb_part3.py  test_hltb_search.py  test_hltb_search_part2.py  test_library_hider.py  test_library_hider_part2.py  test_main.py  test_main_part2.py  test_main_part3.py  test_main_part4.py  test_main_part5.py  test_mcp.py  test_polls_tracking.py  test_polls_tracking_part2.py  test_protondb.py  test_scanning.py  test_scanning_part2.py  test_scanning_part3.py  test_scanning_part4.py  test_stats.py  test_steam_api.py  test_store_blocker.py  test_store_blocker_part2.py  test_total_block.py  test_update_restart_guard.py  test_web_dataset.py  (+2 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  api.ts  estimate.test.ts  estimate.ts  format.test.ts  format.ts  index.css  protondb.test.ts  protondb.ts  types.ts
web/src/components/: FilterPanel.test.tsx  FilterPanel.tsx  GameTable.test.tsx  GameTable.tsx  SummaryCards.test.tsx  SummaryCards.tsx  TimelineChart.test.tsx  TimelineChart.tsx
web/src/test/: factories.ts  setup.ts
